src/main/kubernetes/deploymentconfig.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scheme: http
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-order-mgr.git
    app.quarkus.io/commit-id: 1c72c444347b2484372769219b91890f1b13e843
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-order-mgr.git
    app.quarkus.io/build-timestamp: 2021-02-16 - 04:13:13 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.1
    app: vaccineorderms
    app.openshift.io/runtime: quarkus
  name: vaccineorderms
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.1
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    prometheus.io/scheme: http
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-order-mgr.git
    app.quarkus.io/commit-id: 1c72c444347b2484372769219b91890f1b13e843
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-order-mgr.git
    app.quarkus.io/build-timestamp: 2021-02-16 - 04:13:13 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.1
    app: vaccineorderms
    app.openshift.io/runtime: quarkus
  name: vaccineorderms
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.1
  template:
    metadata:
      annotations:
        prometheus.io/scheme: http
        app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-order-mgr.git
        app.quarkus.io/commit-id: 1c72c444347b2484372769219b91890f1b13e843
        app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-order-mgr.git
        app.quarkus.io/build-timestamp: 2021-02-16 - 04:13:13 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
      labels:
        app.kubernetes.io/name: vaccineorderms
        app.kubernetes.io/version: 0.0.1
        app: vaccineorderms
        app.openshift.io/runtime: quarkus
    spec:
      containers:
      - args:
        - -jar
        - /deployments/vaccine-order-mgr-pg-0.0.1-runner.jar
        - -cp
        - /deployments/lib/io.quarkus.quarkus-security-runtime-spi-1.11.0.Final.jar:/deployments/lib/io.quarkus.quarkus-vertx-http-dev-console-runtime-spi-1.11.0.Final.jar:/deployments/lib/io.quarkus.security.quarkus-security-1.1.3.Final.jar:/deployments/lib/io.netty.netty-codec-4.1.49.Final.jar:/deployments/lib/io.quarkus.quarkus-netty-1.11.0.Final.jar:/deployments/lib/io.quarkus.quarkus-vertx-core-1.11.0.Final.jar:/deployments/lib/io.vertx.vertx-web-common-3.9.5.jar:/deployments/lib/io.vertx.v [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: ibmcase/vaccineorderms:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: vaccineorderms
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: es-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user
          readOnly: false
          subPath: ""
      serviceAccount: vaccineorderms
      volumes:
      - name: es-cert
        secret:
          defaultMode: 384
          optional: false
          secretName: kafka-cluster-ca-cert
      - name: user
        secret:
          defaultMode: 384
          optional: false
          secretName: jesus-tls
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    prometheus.io/scheme: http
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-order-mgr.git
    app.quarkus.io/commit-id: 1c72c444347b2484372769219b91890f1b13e843
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-order-mgr.git
    app.quarkus.io/build-timestamp: 2021-02-16 - 04:13:13 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.1
    app: vaccineorderms
    app.openshift.io/runtime: quarkus
  name: vaccineorderms
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: vaccineorderms
